@startuml
' Use right-angle straight lines for relationships
skinparam linetype ortho
hide circle
skinparam classAttributeIconSize 0
skinparam classBackgroundColor White
skinparam classBorderColor Black

' Define classes
class FitTrack {
    +main()
}

class Parser {
    +parse()
    +getExercise()
}

class Ui {
    +printGreeting()
    +printUser()
    +printHelp()
    +printAddedSession()
    +printDeletedSession()
    +printSessionList()
    +printSessionView()
    +printUnrecognizedInputMessage()
}

class Storage {
    +initialiseSaveFile()
    +loadSaveFile()
    +updateSaveFile()
}

class TrainingSession {
    -LocalDateTime sessionDateTime
    -String description
    -User user
    +editExercise()
    +printSessionDescription()
    +viewSession()
}

class User {
    -String gender
    -int age
    +setGender()
    +setAge()
    +getGender()
    +getAge()
}

enum Exercise <<enumeration>> {
    PULL_UP
    SHUTTLE_RUN
    SIT_AND_REACH
    SIT_UP
    STANDING_BROAD_JUMP
    WALK_AND_RUN
}

class FitTrackLogger {
    +setupLogger()
}

' Define relationships with right-angle arrows
FitTrack "1" --> "1" Parser : uses
FitTrack "1" --> "1" Ui : uses
FitTrack "1" --> "1" Storage : uses
FitTrack "1" --> "1" User : manipulates
FitTrack "1" --> "1" FitTrackLogger : uses

Parser "1" --> "*" TrainingSession : manipulates
Parser "1" --> Exercise : gets
Parser "1" --> "1" User : manipulates
Parser "1" --> "1" Ui : uses

Ui "1" -> "1" User : displays
Ui "1" --> "*" TrainingSession : displays

Storage "1" --> "*" TrainingSession : manages
Storage "1" --> "1" FitTrackLogger : uses

TrainingSession "*" ---> "1" User : belongs to
TrainingSession "*" --> Exercise : contains

@enduml
